--- a/Week_5_Lab/log4net.config
+++ b/Week_5_Lab/log4net.config
@@ -23,12 +23,7 @@
 		<maximumFileSize value="10MB" />
 		<staticLogFileName value="true" />
 		<layout type="log4net.Layout.PatternLayout">
-			<conversionPattern value="%date [%thread] %-5level %logger -
-%message%newline" />
+			<conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
 		</layout>
 	</appender>
-
-	3
-
-
 </log4net>
